<resources>
    <string name="app_name">BookHub</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="search_your_books">Search Your Books</string>
    <string name="textsample">textSample</string>
    <string name="info">info</string>
    <string name="email">Email</string>
    <string name="bookhub">BookHub</string>
    <string name="todo">TODO</string>
    <string name="profile">profile</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="a_budding_book_revolution">A budding book revolution</string>
</resources>