<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="418dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneSignUp"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shapebg"
             android:drawableLeft="@drawable/ic_baseline_email_24"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_email_24" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:hint="@string/user_name" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"

            android:layout_marginTop="506dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:passwordToggleTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordSignUp"

                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"

                android:background="@drawable/shapebg"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"

                android:drawableLeft="@drawable/ic_baseline_lock_open_24"
                android:hint="@string/password"
                 />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="141dp"
            android:layout_marginLeft="141dp"
            android:layout_marginTop="619dp"
            android:layout_marginEnd="144dp"
            android:layout_marginRight="144dp"
            android:background="@drawable/bg_button"
            android:text="@string/sign_up"
            android:textColor="#F8FBFB" />
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit2"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="81dp"
            android:layout_height="78dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="164dp"
            android:layout_marginLeft="164dp"
            android:layout_marginTop="243dp"
            android:visibility="invisible"
            app:SpinKit_Color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>


</FrameLayout>