<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/MainActivity"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        app:srcCompat="@drawable/ic_waveup"
        tools:ignore="VectorDrawableCompat" />


    <View
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="103dp"
        android:fontFamily="@font/amitaa"
        android:gravity="center_horizontal"
        android:text="@string/bookhub"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        android:textSize="45sp"
        app:fontFamily="@font/amitaa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/txtViewLogin"
        android:layout_width="199dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="243dp"
        android:fontFamily="@font/amitaa"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorblack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/txtViewSignup"
        android:layout_width="199dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:fontFamily="@font/amitaa"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/colorblack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        app:srcCompat="@drawable/bookhublogo" />


</RelativeLayout>